<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/search_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/search_type_netease_cloud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_main_type_netease_cloud"
            android:layout_weight="1"/>
        <RadioButton
            android:id="@+id/search_type_kugou"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_main_type_kugou"
            android:layout_weight="1"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/search_type_qq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_main_type_qq"
            android:layout_weight="1"/>
    </RadioGroup>

    <RelativeLayout
        android:id="@+id/player"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <ImageView
            android:id="@+id/player_cover"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@mipmap/ic_launcher"
            android:contentDescription="@string/activity_main_player_cover"
            android:layout_alignParentStart="true"/>

        <LinearLayout
            android:id="@+id/player_command"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_alignParentEnd="true">

            <ImageView
                android:id="@+id/player_button"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:padding="6dp"
                android:contentDescription="@string/activity_main_player_button"
                android:scaleType="centerInside"
                android:src="@drawable/play" />

            <ImageView
                android:id="@+id/download_button"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:padding="6dp"
                android:src="@drawable/download"
                android:contentDescription="@string/activity_main_download_button"
                android:scaleType="centerInside" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="vertical"
            android:layout_toStartOf="@id/player_command"
            android:layout_toEndOf="@id/player_cover">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="8dp"
                android:paddingEnd="8dp">
                <TextView
                    android:id="@+id/song_name"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:lines="1"/>
                <TextView
                    android:id="@+id/singer_name"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_marginStart="10dp"
                    android:lines="1"/>
            </LinearLayout>

            <android.support.v7.widget.AppCompatSeekBar
                android:id="@+id/player_seek_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"/>
        </LinearLayout>
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/search_result"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/search_type"
        android:layout_above="@id/player">
    </android.support.v7.widget.RecyclerView>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        style="@android:style/Widget.ProgressBar.Large"/>
</RelativeLayout>