<resources>
    <string name="app_name">搜歌助手</string>
    <string name="label_setting">设置</string>

    <string name="activity_main_search_hint">请输入歌曲名字</string>
    <string name="activity_main_player_cover">专辑封面</string>
    <string name="activity_main_player_button">播放/停止按钮</string>
    <string name="activity_main_download_button">下载按钮</string>
    <string name="activity_main_type_netease_cloud">网易云</string>
    <string name="activity_main_type_kugou">酷狗</string>
    <string name="activity_main_type_qq">QQ音乐</string>

    <string name="menu_search">搜索</string>
    <string name="menu_setting">设置</string>

    <string name="toast_network_error">网络错误</string>
    <string name="toast_player_url_error">播放地址错误</string>
    <string name="toast_download_finish">下载完成啦</string>
    <string name="toast_permission_write_fail">获取写入权限失败</string>

    <string name="preference_title_base">基本设置</string>
    <string name="preference_download_path_key">download_path</string>
    <string name="preference_download_path">下载路径</string>
</resources>
